RESOLVED FIXED106333
AX: PopUpButtons do not report that AXValueAttribute is supported
https://bugs.webkit.org/show_bug.cgi?id=106333
Summary AX: PopUpButtons do not report that AXValueAttribute is supported
chris fleizach
Reported 2013-01-08 09:50:07 PST
In the list of attribute names that an object reports, AXValue needs to be reported for PopUpButtons
Attachments
patch (4.96 KB, patch)
2013-01-08 10:28 PST, chris fleizach
no flags
patch (5.09 KB, patch)
2013-01-08 10:30 PST, chris fleizach
rniwa: review+
chris fleizach
Comment 1 2013-01-08 09:51:15 PST
Found this from investigating layout test failure in https://bugs.webkit.org/show_bug.cgi?id=103794
chris fleizach
Comment 2 2013-01-08 10:28:40 PST
chris fleizach
Comment 3 2013-01-08 10:30:47 PST
Ryosuke Niwa
Comment 4 2013-01-08 10:38:58 PST
Comment on attachment 181707 [details] patch rs=me.
chris fleizach
Comment 5 2013-01-08 10:41:51 PST
Note You need to log in before you can comment on or make changes to this bug.