AX: PopUpButtons do not report that AXValueAttribute is supported https://bugs.webkit.org/show_bug.cgi?id=106333

Reviewed by Ryosuke Niwa.

Source/WebCore:

The Mac platform expects that AXPopUpButton's expose the AXValue attribute.

Test: platform/mac/accessibility/popup-button-exposes-axvalue.html

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::isPopUpButton):
* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(-[WebAccessibilityObjectWrapper additionalAccessibilityAttributeNames]):

LayoutTests:

* platform/mac/accessibility/popup-button-exposes-axvalue-expected.txt: Added.
* platform/mac/accessibility/popup-button-exposes-axvalue.html: Added.



Canonical link: https://commits.webkit.org/124533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139077 268f45cc-cd09-0410-ab3c-d52691b4dbfc